# bioformats_jar

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  bioformats_jar.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
bioformats_jar/: __init__.py  __init__.pyi  bf.py  utils.py
bioformats_jar/_loci/: __init__.pyi
bioformats_jar/_loci/common/: __init__.pyi
bioformats_jar/_loci/common/enumeration/: __init__.pyi
bioformats_jar/_loci/common/image/: __init__.pyi
bioformats_jar/_loci/common/services/: __init__.pyi
bioformats_jar/_loci/common/xml/: __init__.pyi
bioformats_jar/_loci/formats/: __init__.pyi
bioformats_jar/_loci/formats/cache/: __init__.pyi
bioformats_jar/_loci/formats/codec/: __init__.pyi
bioformats_jar/_loci/formats/gui/: __init__.pyi
bioformats_jar/_loci/formats/in_/: __init__.pyi
bioformats_jar/_loci/formats/meta/: __init__.pyi
bioformats_jar/_loci/formats/ome/: __init__.pyi
bioformats_jar/_loci/formats/services/: __init__.pyi
bioformats_jar/_loci/formats/tiff/: __init__.pyi
bioformats_jar/_loci/formats/tools/: __init__.pyi
bioformats_jar/_loci/plugins/: __init__.pyi
bioformats_jar/_loci/plugins/config/: __init__.pyi
bioformats_jar/_loci/plugins/in_/: __init__.pyi
bioformats_jar/_loci/plugins/macro/: __init__.pyi
bioformats_jar/_loci/plugins/prefs/: __init__.pyi
bioformats_jar/_loci/plugins/shortcut/: __init__.pyi
bioformats_jar/_loci/plugins/util/: __init__.pyi
bioformats_jar/_loci/poi/: __init__.pyi
bioformats_jar/_loci/poi/ddf/: __init__.pyi
bioformats_jar/_loci/poi/dev/: __init__.pyi
bioformats_jar/_loci/poi/hpsf/: __init__.pyi
bioformats_jar/_loci/poi/hpsf/wellknown/: __init__.pyi
bioformats_jar/_loci/poi/hssf/: __init__.pyi
bioformats_jar/_loci/poi/hssf/dev/: __init__.pyi
bioformats_jar/_loci/poi/hssf/eventmodel/: __init__.pyi
bioformats_jar/_loci/poi/hssf/eventusermodel/: __init__.pyi
bioformats_jar/_loci/poi/hssf/extractor/: __init__.pyi
bioformats_jar/_loci/poi/hssf/model/: __init__.pyi
bioformats_jar/_loci/poi/hssf/record/: __init__.pyi
bioformats_jar/_loci/poi/hssf/record/aggregates/: __init__.pyi
bioformats_jar/_loci/poi/hssf/record/formula/: __init__.pyi
bioformats_jar/_loci/poi/hssf/usermodel/: __init__.pyi
bioformats_jar/_loci/poi/hssf/util/: __init__.pyi
bioformats_jar/_loci/poi/poifs/: __init__.pyi
bioformats_jar/_loci/poi/poifs/common/: __init__.pyi
bioformats_jar/_loci/poi/poifs/dev/: __init__.pyi
bioformats_jar/_loci/poi/poifs/eventfilesystem/: __init__.pyi
bioformats_jar/_loci/poi/poifs/filesystem/: __init__.pyi
bioformats_jar/_loci/poi/poifs/property/: __init__.pyi
bioformats_jar/_loci/poi/poifs/storage/: __init__.pyi
bioformats_jar/_loci/poi/util/: __init__.pyi
bioformats_jar/_ome/codecs/gui/: __init__.pyi
bioformats_jar/_ome/jxrlib/: __init__.pyi
bioformats_jar/_ome/ome-stubs/: __init__.pyi
bioformats_jar/_ome/ome-stubs/codecs/: __init__.pyi
bioformats_jar/_ome/ome-stubs/codecs/services/: __init__.pyi
bioformats_jar/_ome/ome-stubs/metakit/: __init__.pyi
bioformats_jar/_ome/ome-stubs/specification/: __init__.pyi
bioformats_jar/_ome/ome-stubs/units/: __init__.pyi
bioformats_jar/_ome/ome-stubs/units/quantity/: __init__.pyi
bioformats_jar/_ome/ome-stubs/units/unit/: __init__.pyi
bioformats_jar/_ome/ome-stubs/xml/meta/: __init__.pyi
bioformats_jar/_ome/ome-stubs/xml/model/enums/: __init__.pyi
bioformats_jar/_ome/ome-stubs/xml/model/enums/handlers/: __init__.pyi
bioformats_jar/_ome/specification/: __init__.pyi
bioformats_jar/_ome/units/: __init__.pyi
bioformats_jar/_ome/xml/: __init__.pyi
bioformats_jar/_ome/xml/meta/: __init__.pyi
bioformats_jar/_ome/xml/model/: __init__.pyi
bioformats_jar/_ome/xml/model/enums/handlers/: __init__.pyi
bioformats_jar/_ome/xml/model/primitives/: __init__.pyi
tests/: test_bioformats_jar.py
