[metadata]
name = bioformats_jar
version = 6.7.0
description = type stubs and simple jpype wrapper for bioformats_package.jar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/bioformats_jar
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = GPL-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/tlambert03/bioformats_jar

[options]
packages = find:
install_requires =
    JPype1~=1.2
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.package_data]
* = *.pyi

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = bioformats_jar

[tool:pytest]
addopts = -W error

[mypy]
files = bioformats_jar
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
