[metadata]
name = bioformats_jar
description = bioformats_package.jar installer for scyjava
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/bioformats_jar
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = GPL-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/tlambert03/bioformats_jar

[options]
py_modules =
    bioformats_jar
install_requires =
    scyjava
python_requires = >=3.8

[options.extras_require]
testing =
    pytest
    pytest-cov

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100,D213,D401,D413,D107,W503,F822

[isort]
profile = black
src_paths = bioformats_jar

[tool:pytest]
filterwarnings =
    error
    ignore:distutils Version classes are deprecated:
